Add: babel for compile js, easy run using command line

--- a/src/scss/_button.scss
+++ b/src/scss/_button.scss
@@ -1,5 +1,7 @@
 
 .ft-button {
-    background: yellow;
+    background: red;
     box-shadow: 1px 1px #000;
+    border: 0;
+    font-size: 15px;
 }
