Features: nav, side-nav, content

--- a/src/scss/_button.scss
+++ b/src/scss/_button.scss
@@ -1,6 +1,6 @@
 
 .ft-button {
-    background: red;
+    background: transparent;
     box-shadow: 1px 1px #000;
     border: 0;
     font-size: 15px;
