--- a/docs/app/app.component.html
+++ b/docs/app/app.component.html
@@ -1,3 +1,7 @@
 
-<router-outlet></router-outlet>
-<button class="ft-button">Button</button>
+<app-nav></app-nav>
+    <app-header></app-header>
+    <app-sidenav-content>
+        <router-outlet></router-outlet>
+    </app-sidenav-content>
+<app-footer></app-footer>
