Fix: docs, libs | Note: maybe can add another feature like copy text, etc

--- a/docs/styles.scss
+++ b/docs/styles.scss
@@ -37,3 +37,14 @@ img {
     -webkit-user-drag: none;
     -moz-user-drag: none;
 }
+
+h2 {
+    font-size: 30px;
+    margin-bottom: 20px;
+}
+
+p {
+    font-size: 19px;
+    margin-bottom: 1em;
+    line-height: 1.3em; 
+}
