--- a/docs/app/shared/nav/nav.component.html
+++ b/docs/app/shared/nav/nav.component.html
@@ -1,6 +1,6 @@
 <div class="nav-side">
     <ul class="nav-side--menu">
         <li class="nav--item"><a routerLink="/docs/start">Getting Started</a></li>
-        <li class="nav--item"><a routerLink="/search">Component</a></li>
+        <li class="nav--item"><a routerLink="/docs/components">Components</a></li>
     </ul>
 </div>
