--- a/docs/app/shared/nav/nav.component.scss
+++ b/docs/app/shared/nav/nav.component.scss
@@ -1,6 +1,6 @@
 
 .nav-side {
-    width: 30%;
+    width: 20%;
     height: 100%;
     position: fixed;
     z-index: 1000;
@@ -8,6 +8,7 @@
     left: 0;
     overflow-x: hidden;
     padding: 30px 0;
+    box-shadow: 1px 0px 17px #00000024;
 }
 
 .nav-side--menu {
