fix: docs, lib configuration, change structure

--- a/docs/app/app.component.html
+++ b/docs/app/app.component.html
@@ -3,4 +3,5 @@
 <app-header></app-header>
 <app-sidenav-content>
     <router-outlet></router-outlet>
+    <!-- <salt-button>Button</salt-button> -->
 </app-sidenav-content>
