Fix features: web component integration; Update app structure

--- a/docs/app/modules/get-started/get-started.component.html
+++ b/docs/app/modules/get-started/get-started.component.html
@@ -5,5 +5,5 @@
 <p>
     Contrary to popular belieff, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
 
-    <salt-button>Button From Lib</salt-button>
+    <salt-button value="Button From Lib"></salt-button>
 </p>
