SH for build web component 🔥

--- a/projects/salt/lib/css/main.css
+++ b/projects/salt/lib/css/main.css
@@ -40,7 +40,7 @@
     line-height: 36px;
     padding: 0 16px;
     border-radius: 4px;
-    background: red; }
+    background: #1976d2; }
     .ft-button--primary .button--label {
       color: #fff; }
   .ft-button--accent {
