--- a/examples/react/src/index.html.ejs
+++ b/examples/react/src/index.html.ejs
@@ -3,14 +3,9 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Nodeflux - Frontend Assignment Test</title>
-        <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
-        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
+        <title>ExampleFor React</title>
     </head>
     <body>
-        <!-- You should declared here -->
-        <app-root></app-root>
-        
         <div id="root"></div>
 
         <!-- Dependencies -->
@@ -23,11 +18,6 @@
         <% } %>
 
         <!-- Required files, we handle this file type using webpack -->
-        <script src="../salt/api/library/runtime-es2015.js"></script>
-        <script src="../salt/api/library/runtime-es5.js" nomodule defer></script>
-        <script src="../salt/api/library/polyfills-es5.js" nomodule defer></script>
-        <script src="../salt/api/library/polyfills-es2015.js"></script>
-        <script src="../salt/api/library/main-es2015.js"></script>
-        <script src="../salt/api/library/main-es5.js" nomodule defer></script>
+        <script src="salt/api/library/button.js"></script>
     </body>
 </html>
